--- a/src/css/base.less
+++ b/src/css/base.less
@@ -21,3 +21,11 @@ li,
 dt,
 dd { list-style: none; }
 .dis-in-b{display: inline-block;}
+.fl{float: left;}
+.fr{float: right;}
+.pr{
+	position: relative;
+}
+.pa{
+	position: absolute;
+}
